// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component/attachment => should not render control buttons when an attachment is not being loaded or created on touch device 1`] = `
<div
  class="attachment"
  style="background-image: url(preview);"
/>
`;

exports[`component/attachment => should render control buttons when an attachment is not being loaded or created on desktop device 1`] = `
<div
  class="attachment"
  style="background-image: url(preview);"
>
  <div
    class="attachment__controls"
  >
    <lego-components_button
      classname="attachment__delete"
      size="s"
      view="clear-inverse"
    />
  </div>
</div>
`;

exports[`component/attachment => should render spinner when an attachment is being created 1`] = `
<div
  class="attachment attachment_loading"
  style="background-image: url(preview);"
>
  <div
    class="attachment__spinner-container"
  >
    <lego-components_spin
      progress="true"
      size="m"
      view="default"
    />
  </div>
</div>
`;
